# agent-skills

./: .gitignore  README.md  main.py  pyproject.toml
.claude/skills/cool-package-skill/: SKILL.md
.cursor/skills/yah-package-skill/: SKILL.md
src/: commands.py  constants.py  middleware.py  utils.py
