[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentskills"
version = "0.1.0"
description = "Python package for creating agent skills"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
agent-skills = "main:main"
